--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -22,7 +22,7 @@
             android:textColor="#888887"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/email"
+            android:hint="@string/email"
             android:background="@drawable/edittext_background"
             android:padding="13dp"
             android:elevation="3dp"
@@ -38,7 +38,8 @@
             android:textColor="#888887"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:text="@string/password"
+            android:hint="@string/password"
+            android:inputType="textPassword"
             android:background="@drawable/edittext_background"
             android:padding="13dp"
             android:elevation="3dp"
