--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -49,7 +49,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/email_login"
             android:drawableStart="@drawable/keylog"
-            android:drawablePadding="13dp"/>
+            android:drawablePadding="13dp" />
 
     <Button
             android:id="@+id/login_btn"
@@ -64,7 +64,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintHorizontal_bias="0.506" android:layout_marginBottom="16dp"
             app:layout_constraintTop_toBottomOf="@+id/password_login"
-            app:layout_constraintVertical_bias="0.073"/>
+            app:layout_constraintVertical_bias="0.073" />
+
     <TextView
             android:id="@+id/login_button"
             android:layout_width="wrap_content"
@@ -76,8 +77,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintVertical_bias="0.2"
-            app:layout_constraintHorizontal_bias="0.4"
-    />
+            app:layout_constraintHorizontal_bias="0.4" />
+
     <TextView
             android:id="@+id/sign_in"
             android:layout_width="wrap_content"
@@ -90,6 +91,17 @@
             app:layout_constraintBottom_toBottomOf="@+id/login_button"
             app:layout_constraintTop_toTopOf="@+id/login_button"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/login_button"/>
+            app:layout_constraintStart_toEndOf="@+id/login_button" />
 
+    <ProgressBar
+        android:id="@+id/progressbar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/login_button"
+        app:layout_constraintVertical_bias=".1"
+        android:scaleY=".5"
+        android:scaleX=".5" />
 </androidx.constraintlayout.widget.ConstraintLayout>
