--- a/app/src/main/res/layout/popular_item.xml
+++ b/app/src/main/res/layout/popular_item.xml
@@ -13,14 +13,14 @@
         android:orientation="vertical"
         android:padding="5dp">
 
-        <com.makeramen:roundedimageview.RoundedImageView
+        <com.makeramen.roundedimageview.RoundedImageView
             android:id="@+id/pop_img"
             android:layout_width="280dp"
             android:layout_height="190dp"
             app:riv_corner_radius="140dp"
             android:scaleType="centerCrop"
-            android:src="@mipmap/offers3"/>
-        
+            android:src="@mipmap/offers3" />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
